--- a/backend-migrators/package.json
+++ b/backend-migrators/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
     "db-migrate-mssql": "^2.1.0",
@@ -30,7 +31,8 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "jest": "^30.0.2",
