--- a/front-migrators/package.json
+++ b/front-migrators/package.json
@@ -49,7 +49,8 @@
     "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
-    "sass": "^1.86.0",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "sass": "^1.89.2",
     "sass-embedded": "^1.86.0",
     "tailwindcss": "^4.1.5",
     "vite": "^6.0.5",
