--- a/backend-migrators/package.json
+++ b/backend-migrators/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "debug": "node --inspect server.js",
+    "start": "node -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config server.js",
+    "debug": "node --inspect -r dotenv/config server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
   },
   "keywords": [],
@@ -14,28 +14,27 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
-    "compression": "^1.8.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
-    "db-migrate-mssql": "^2.1.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
+    "db-migrate-mssql": "^2.1.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1",
-    "multer": "^2.0.0",
+    "mssql": "^10.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "node-fetch": "^3.3.2",
-    "path": "^0.12.7",
-    "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "jest": "^30.0.2",
-    "supertest": "^7.1.1"
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
