--- a/front-migrators/package.json
+++ b/front-migrators/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue-3": "^0.3.12",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
